--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,2 +1,5 @@
 <h1>{{ title }}</h1>
+<app-action-buttons></app-action-buttons>
+<app-color-buttons></app-color-buttons>
 <app-hexagon-grid></app-hexagon-grid>
+<app-grid-dimensions></app-grid-dimensions>
