--- a/front/src/app/hexagon-grid/hexagon-grid.component.css
+++ b/front/src/app/hexagon-grid/hexagon-grid.component.css
@@ -1,7 +1,7 @@
 .hex-grid {
   display: flex;
   background-color: black;
-  flex-direction: column;
+  flex-direction: row; /* Passer à ligne pour retourner la grille */
   justify-content: center;
   align-items: center;
   padding: 20px;
@@ -11,14 +11,15 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 10px;
+  gap: 0; /* Retirer le gap pour éviter l'espacement entre les hexagones */
+  flex-direction: column;
 }
 
 .hexagon {
   position: relative;
   width: 60px;
   height: 52px;
-  clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
+  clip-path: polygon(25% 0, 75% 0%, 100% 50%, 75% 100%, 25% 100%, 0% 50%);
   cursor: pointer;
   display: flex;
   justify-content: center;
