--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,5 +1,5 @@
 <h1>{{ title }}</h1>
 <app-action-buttons [grid]="currentGrid"></app-action-buttons>
 <app-color-buttons></app-color-buttons>
-<app-hexagon-grid (newGrid)="updateGrid($event)"></app-hexagon-grid>
+<app-hexagon-grid [width]="5" [height]="15"></app-hexagon-grid>
 <app-grid-dimensions></app-grid-dimensions>
