--- a/front/src/app/hexagon-grid/hexagon-grid.component.css
+++ b/front/src/app/hexagon-grid/hexagon-grid.component.css
@@ -1,41 +1,51 @@
-.hex-grid {
-  display: flex;
-  background-color: black;
-  flex-direction: row; /* Passer à ligne pour retourner la grille */
-  justify-content: center;
-  align-items: center;
-  padding: 20px;
-}
-
-.hex-row {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 0; /* Retirer le gap pour éviter l'espacement entre les hexagones */
-  flex-direction: column;
-}
-
-.hexagon {
-  position: relative;
-  width: 60px;
-  height: 52px;
-  clip-path: polygon(25% 0, 75% 0%, 100% 50%, 75% 100%, 25% 100%, 0% 50%);
+/* grid styling */
+use {
+  transition: 0.4s;
   cursor: pointer;
+  fill: transparent;
+}
+
+.pod-wrap use:hover {
+  fill: #000000;
+}
+
+/* other styling */
+svg {
+  width: 100%; /* Adapte la taille du SVG au parent */
+  height: auto; /* Permet de maintenir l'aspect ratio du SVG */
+  max-width: 100%; /* Empêche le SVG de dépasser le conteneur */
+  display: block; /* Éviter les marges automatiques du SVG */
+}
+
+body {
   display: flex;
   justify-content: center;
   align-items: center;
-  color: black;
-  font-weight: bold;
-  transition: background-color 0.3s ease;
+  flex-direction: column;
+  margin: 0;
+  height: 100vh;
+  font-weight: 700;
+  font-family: sans-serif;
+  overflow: hidden; /* Évite tout débordement de contenu */
 }
 
-.hexagon:hover {
-  background-color: gray;
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  padding: 10px; /* Ajoute un peu d'espace autour de la grille */
+  overflow: auto; /* Permet le défilement si nécessaire */
 }
 
-.hexagon span {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+a {
+  color: #ccc;
+  padding: 10px;
+  text-decoration: none;
+  transition: color 0.4s;
+}
+
+a:hover {
+  color: #333;
 }
