--- a/front/src/app/hexagon-grid/hexagon-grid.component.html
+++ b/front/src/app/hexagon-grid/hexagon-grid.component.html
@@ -1,18 +1,13 @@
-<div class="hex-grid">
-  <div
-    *ngFor="let col of grid.tab[0]; let colIndex = index"
-    class="hex-row"
-    [style.margin-top]="colIndex % 2 === 0 ? '0' : '60px'"
-  >
-    <div
-      *ngFor="let row of grid.tab; let rowIndex = index"
-      class="hexagon"
-      [ngStyle]="{
-        'background-color': (rowIndex === grid.start[0] && colIndex === grid.start[1]) ? 'blueviolet' :
-                             (rowIndex === grid.end[0] && colIndex === grid.end[1]) ? 'red' : getColorForWeight(1)
-      }"
-      (click)="onHexClick(rowIndex, colIndex)">
-      <span>{{ rowIndex }},{{ colIndex }}</span>
-    </div>
-  </div>
-</div>
+<svg viewBox="0 0 300 200">
+  <defs>
+    <g id="pod">
+      <polygon stroke="#000000" stroke-width="0.5" points="5,-9 -5,-9 -10,0 -5,9 5,9 10,0" />
+    </g>
+  </defs>
+
+  <g class="pod-wrap">
+    <ng-container *ngFor="let pos of calculatedPositions">
+      <use xlink:href="#pod" [attr.transform]="'translate(' + pos.x + ', ' + pos.y + ')'"></use>
+    </ng-container>
+  </g>
+</svg>
