--- a/front/src/app/hexagon-grid/hexagon-grid.component.html
+++ b/front/src/app/hexagon-grid/hexagon-grid.component.html
@@ -1,4 +1,4 @@
-<svg viewBox="0 0 300 200">
+<svg [attr.viewBox]="getSvgViewBox()" (mousedown)="onSvgMouseDown()" (mouseup)="onMouseUp()" (mouseleave)="onMouseUp()">
   <defs>
     <g id="pod">
       <polygon stroke="#000000" stroke-width="0.5" points="5,-9 -5,-9 -10,0 -5,9 5,9 10,0" />
@@ -9,7 +9,11 @@
     <ng-container *ngFor="let pos of calculatedPositions; let i = index">
       <use xlink:href="#pod"
            [attr.transform]="'translate(' + pos.x + ', ' + pos.y + ')'"
-           [ngClass]="{'hexagon-start': isStart(i), 'hexagon-end': isEnd(i)}"></use>
+           [ngClass]="getHexagonClass(i)"
+           [ngClass]="{'hexagon-start': isStart(i), 'hexagon-end': isEnd(i)}"
+           (mousedown)="onMouseDown(i)"
+           (mouseup)="onMouseUp()"
+           (mouseover)="onMouseOver(i)"></use>
     </ng-container>
   </g>
 </svg>
