--- a/front/src/app/color-buttons/color-buttons.component.css
+++ b/front/src/app/color-buttons/color-buttons.component.css
@@ -65,3 +65,7 @@
   font-size: 16px;
   color: #343a40;
 }
+.pressed {
+  filter: brightness(0.9);
+  box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+}
