[Angular] ajout de l'image dans l'interface

--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,3 +1,4 @@
+<img src="/chiffredeux.png" alt="Image de chiffre deux"/>
 <div class="app-container">
   <div class="action-buttons-container">
     <app-action-buttons [grid]="currentGrid" (gridChange)="updateGrid($event)"></app-action-buttons>
