[Angular] Ajout de la fonctionnalité pour regénerer visuellement la grille

--- a/front/src/app/action-buttons/action-buttons.component.html
+++ b/front/src/app/action-buttons/action-buttons.component.html
@@ -1,4 +1,9 @@
-<div>
+<div id="navbar" >
     <button (click)="generateGrid()">Tout effacer</button>
-    <button (click)="sendGridData()">Dijkstra</button>
+    <button (click)="sendGridData()">Parcours en profondeur</button>
+    <button (click)="salut()">Parcours en largeur</button>
+    <button (click)="salut()">Belleman-ford</button>
+    <button (click)="salut()">Dijkstra</button>
+    <button (click)="salut()">A*</button>
+    <button (click)="salut()">AllerAToire</button>
 </div>
