[Angular] Modification du css

--- a/front/src/app/action-buttons/action-buttons.component.html
+++ b/front/src/app/action-buttons/action-buttons.component.html
@@ -1,4 +1,9 @@
-<div>
+<div id="navbar" >
     <button (click)="generateGrid()">Tout effacer</button>
+    <button (click)="sendGridData()">Parcours en profondeur</button>
+    <button (click)="sendGridData()">Parcours en largeur</button>
+    <button (click)="sendGridData()">Belleman-ford</button>
     <button (click)="sendGridData()">Dijkstra</button>
+    <button (click)="sendGridData()">A*</button>
+    <button (click)="sendGridData()">AllerAToire</button>
 </div>
