to ammend api algorithmes

--- a/front/src/app/action-buttons/action-buttons.component.html
+++ b/front/src/app/action-buttons/action-buttons.component.html
@@ -1,9 +1,9 @@
-<div id="navbar" >
+<div id="navbar">
     <button (click)="generateGrid()">Tout effacer</button>
-    <button (click)="sendGridData()">Parcours en profondeur</button>
-    <button (click)="salut()">Parcours en largeur</button>
-    <button (click)="salut()">Belleman-ford</button>
-    <button (click)="salut()">Dijkstra</button>
-    <button (click)="salut()">A*</button>
-    <button (click)="salut()">AllerAToire</button>
+    <button (click)="runDFS()">Parcours en profondeur</button>
+    <button (click)="runBFS()">Parcours en largeur</button>
+    <button (click)="runBellmanFord()">Bellman-Ford</button>
+    <button (click)="runDijkstra()">Dijkstra</button>
+    <button (click)="runAStar()">A*</button>
+    <button (click)="runRandomWalk()">AllerAléatoire</button>
 </div>
