--- a/front/src/app/color-buttons/color-buttons.component.css
+++ b/front/src/app/color-buttons/color-buttons.component.css
@@ -20,8 +20,8 @@
 }
 
 .color-buttons button {
-  width: 40px;
-  height: 40px;
+  min-width: 40px;
+  min-height: 40px;
   border: none;
   border-radius: 50%;
   cursor: pointer;
